static/css/style.css
@font-face {
    font-family: "DM Mono";
    src: url(/fonts/dmmono-regular-webfont.woff2);
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "DM Mono";
    src: url(/fonts/dmmono-italic-webfont.woff2);
    font-weight: 400;
    font-style: italic;
}

@font-face {
    font-family: "DM Mono";
    src: url(/fonts/dmmono-medium-webfont.woff2);
    font-weight: 500;
    font-style: normal;
}

@font-face {
    font-family: "DM Mono";
    src: url(/fonts/dmmono-mediumitalic-webfont.woff2);
    font-weight: 500;
    font-style: italic;
}

@font-face {
    font-family: "IBM Plex Serif";
    src: url(/fonts/ibmplexserif-regular-webfont.woff2);
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: "IBM Plex Serif";
    src: url(/fonts/ibmplexserif-italic-webfont.woff2);
    font-weight: 400;
    font-style: italic;
}

@font-face {
    font-family: "IBM Plex Serif";
    src: url(/fonts/ibmplexserif-bold-webfont.woff2);
    font-weight: 700;
    font-style: normal;
}

@font-face {
    font-family: "IBM Plex Serif";
    src: url(/fonts/ibmplexserif-bolditalic-webfont.woff2);
    font-weight: 700;
    font-style: italic;
}

:root {
    color-scheme: light dark;

    --darkmode-bg: #1d2021;
    --darkmode-fg: #f9f5d7;
    --darkmode-fg1: #a89984;

    --lightmode-bg: #ffe;
    --lightmode-fg: #000;
    --lightmode-fg1: #666;
}

body {
    max-width: 640px;
    margin: 3rem auto 5rem auto;

    background-color: light-dark(var(--lightmode-bg), var(--darkmode-bg));
    color: light-dark(var(--lightmode-fg), var(--darkmode-fg));

    font-family: "DM Mono", monospace;
    line-height: 1.5;
    letter-spacing: -0.5px;
}

header nav {
    display: flex;
    gap: 0 1rem;
}

footer {
    margin-top: 4rem;
    text-align: center;

    color: light-dark(var(--lightmode-fg1), var(--darkmode-fg1));
}

footer > hr {
    border: 0;
    border-top: 1px solid light-dark(var(--lightmode-fg1), var(--darkmode-fg1));

    width: 33%;
    
}

code {
    font-family: 'IBM Plex Mono';
}

table {
    border-collapse: collapse;
    text-align: left;
    width: 100%;
}

table th {
    border: 1px solid light-dark(var(--lightmode-fg), var(--darkmode-fg));
    padding: 0.5rem;
}

table td {
    border: 1px solid light-dark(var(--lightmode-fg), var(--darkmode-fg));
    padding: 0.5rem;
}

#poem {
    padding-top: 1rem;
    text-align: center;
    font-style: italic;
}

.homeCard {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;

    width: 65%;
    margin: 5rem auto 0 auto;

    aspect-ratio: 1.75;

    background-color: #fff;
    border: 1px solid #000;
    color: light-dark(var(--darkmode-fg), var(--lightmode-fg));

    text-align: center;
    font-family: 'IBM Plex Serif';
}

.homeCard > * {
    margin: 0;
    color: #000;
}

.homeCard p {
    font-style: italic;
}

.homeCard p:last-of-type {
    padding-bottom: 0.5rem;
}

.articlesList {
    padding-left: 0;
    list-style-type: none;
}

.articlesList span {
    padding-right: 1rem;

    color: light-dark(var(--lightmode-fg1), var(--darkmode-fg1));
}

@media screen and (width < 672px) {
    body {
        margin: 3rem 1rem 5rem 1rem;
    }    
}

